# scrab

./: Cargo.toml  README.md  justfile  package-lock.json  world_gen.toml
codegen/: Cargo.toml
codegen/src/: lib.rs
crates/codegen/: Cargo.toml
crates/hex_grid/: Cargo.toml
crates/hex_grid/src/: lib.rs
crates/scrab_public_types/: Cargo.toml
crates/scrab_public_types/src/: lib.rs
crates/scrab_types/: Cargo.toml
crates/scrab_types/src/: lib.rs
crates/wasm_examples/: Cargo.toml
crates/wasm_examples/src/: lib.rs
frontend/: codegen.ts  package-lock.json  package.json
frontend/src/: App.tsx  ViewWindow.css  ViewWindow.tsx  hex_utils.ts  index.scss  main.tsx  scrab_frontend_types.d.ts  types.ts
frontend/src/App/: App.tsx
frontend/src/Controls/: Controls.scss  Controls.tsx
frontend/src/Room/: Room.scss  Room.tsx
frontend/src/Tile/: Tile.css  Tile.tsx
frontend/src/ViewWindow/: ViewWindow.scss  ViewWindow.tsx
frontend/src/__generated__/: gql.ts  graphql.ts
hex_grid/: Cargo.toml
src/: game_logic.rs  graphql_api.rs  hex_grid.rs  lib.rs  main.rs  public_types.rs  world.rs  www.rs
src/graphql_api/: mod.rs  world.rs
src/hex_grid/: hex_grid.rs  mod.rs  test.rs
src/world/: mod.rs  world_gen.rs
