[package]
name = "scrab"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["codegen", "hex_grid"]

[dependencies]
codegen = {path = "./codegen"}
hex_grid = {path = "./hex_grid"}

thiserror = "1.0"
integer-sqrt = "0.1"
actix-web = "4.3"
log = "0.4"
actix-files = "0.6"
simple_logger = "4.0"
actix-cors = "0.6"
actix-web-actors = "4.2"
actix = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = "1.26"
