[package]
name = "scrab"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["crates/*"]

[dependencies]
codegen = {path = "./crates/codegen"}
hex_grid = {path = "./crates/hex_grid"}
scrab_public_types = {path = "./crates/scrab_public_types"}

thiserror = "1.0"
integer-sqrt = "0.1"
actix-web = "4.3"
log = "0.4"
actix-files = "0.6"
simple_logger = "4.0"
actix-cors = "0.6"
actix-web-actors = "4.2"
actix = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = "1.26"
noise = "0.8.2"
rand = "0.8.5"

[build-dependencies]
scrab_public_types = {path = "./crates/scrab_public_types"}
schemars = "0.8.12"
serde_json = "1.0"
