[package]
name = "scrab"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
codegen = {path = "./crates/codegen"}
hex_grid = {path = "./crates/hex_grid"}
scrab_types = {path = "./crates/scrab_types"}

thiserror = "1.0"
integer-sqrt = "0.1"
actix-web = "4.3"
log = "0.4"
actix-files = "0.6"
simple_logger = "4.0"
actix-cors = "0.6"
actix-web-actors = "4.2"
actix = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.26", features = ["sync"] }
noise = "0.8.2"
rand = "0.8.5"
toml = "0.7.3"
wasmer = "3.1.1"
async-graphql = "5.0.9"
async-graphql-actix-web = "5.0.9"
