[package]
name = "scrab_public_types"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
wasm-bindgen = "0.2.84"
hex_grid = { path = "../hex_grid" }
schemars = "0.8.12"
serde_json = "1.0.94"
scrab_types = { version = "0.1.0", path = "../scrab_types" }
