[package]
name = "scrab_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex_grid = { version = "0.1.0", path = "../hex_grid" }
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
